@@ -20,6 +20,10 @@ Next release
 - Fixed a bug where supervisord would crash if the syslog handler was used
   and supervisord received SIGUSR2 (log reopen request).
 
+- Fixed an XML-RPC bug where calling supervisor.getProcessInfo() with a bad
+  name would cause a 500 Internal Server Error rather than the returning
+  a BAD_NAME fault.
+
 3.0b1 (2012-09-10)
 ------------------
 
